Added Home Page and made style changes.

--- a/index.html
+++ b/index.html
@@ -41,274 +41,54 @@
 </head>
 
 <body>
-    <div class="grid-container">
+    <div class="home-container">
+        <div class="bg"></div>
+        <div class="bg bg2"></div>
+        <div class="bg bg3"></div>
         <div class="navbar siteHeader">
             <img src="rosterIQ_Logo_White.svg" class="mainLogo" />
             <div class="menu">
-                <a class="menuLink" href="home.html">HOME</a>
-                <a class="menuLink" href="explore.html">EXPLORE</a>
+                <a class="menuLink" href="index.html">HOME</a>
                 <a class="menuLink" href="about.html">ABOUT</a>
             </div>
         </div>
-        <div class="teamFilter">
-            <div class="teamFilter-section">
-                <div class="filterSection-label">
-                    Select Team:
-                </div>
-                <div class="inputs d-inline" id="team-names">
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>Alabama</span>
-                                <input type="checkbox" class="TeamName" name="Alabama" value="Alabama" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>Arkansas</span>
-                                <input type="checkbox" class="TeamName" name="Arkansas" value="Arkansas" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>Auburn</span>
-                                <input type="checkbox" class="TeamName" name="Auburn" value="Auburn" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>Florida</span>
-                                <input type="checkbox" class="TeamName" name="Florida" value="Florida" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>Georgia</span>
-                                <input type="checkbox" class="TeamName" name="Georgia" value="Georgia" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>Kentucky</span>
-                                <input type="checkbox" class="TeamName" name="Kentucky" value="Kentucky" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>LSU</span>
-                                <input type="checkbox" class="TeamName" name="LSU" value="LSU" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>Mississippi St.</span>
-                                <input type="checkbox" class="TeamName" name="Mississippi State" value="Mississippi State" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>Ole Miss</span>
-                                <input type="checkbox" class="TeamName" name="Mississippi" value="Mississippi" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>South Carolina</span>
-                                <input type="checkbox" class="TeamName" name="South Carolina" value="South Carolina" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>Tennessee</span>
-                                <input type="checkbox" class="TeamName" name="Tennessee" value="Tennessee" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>Vanderbilt</span>
-                                <input type="checkbox" class="TeamName" name="Vanderbilt" value="Vanderbilt" checked>
-                            </label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="teamFilter-section">
-                <div class="filterSection-label">
-                    Select Position:
-                </div>
-                <div class="inputs d-inline" id="team-names">
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>C</span>
-                                <input type="checkbox" class="Position" name="C" value="C" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>OG</span>
-                                <input type="checkbox" class="Position" name="OG" value="OG" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>OT</span>
-                                <input type="checkbox" class="Position" name="OT" value="OT" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>QB</span>
-                                <input type="checkbox" class="Position" name="QB" value="QB" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>RB</span>
-                                <input type="checkbox" class="Position" name="RB" value="RB" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>WR</span>
-                                <input type="checkbox" class="Position" name="WR" value="WR" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>TE</span>
-                                <input type="checkbox" class="Position" name="TE" value="TE" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>DT</span>
-                                <input type="checkbox" class="Position" name="DT" value="DT" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>DB</span>
-                                <input type="checkbox" class="Position" name="DB" value="DB" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>OLB</span>
-                                <input type="checkbox" class="Position" name="OLB" value="OLB" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>MLB</span>
-                                <input type="checkbox" class="Position" name="MLB" value="MLB" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>CB</span>
-                                <input type="checkbox" class="Position" name="CB" value="CB" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>S</span>
-                                <input type="checkbox" class="Position" name="S" value="S" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>P</span>
-                                <input type="checkbox" class="Position" name="P" value="P" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>K</span>
-                                <input type="checkbox" class="Position" name="K" value="K" checked>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="checkDiv">
-                        <div id="checkBtn">
-                            <label>
-                                <span>LS</span>
-                                <input type="checkbox" class="Position" name="LS" value="LS" checked>
-                            </label>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="intro">
+            <div class="briefDesc">An Interactive Map of Athletic Rosters</div>
         </div>
-        <div class="yearSlider">
-            <div class="filterSection-label">
-                Choose Season:
+        <div class="selectSport">
+            <div class="selectSport-label">Select Sport</div>
+            <div class="sportIcon-section">
+                <a href="ncaaFootball.html">
+                    <div class="sportIcon">
+                        <img id="sportIcon-football" src="assets/football.svg">
+                        <span class="sportIcon-text">Football</span>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="sportIcon">
+                        <img id="sportIcon-baskbetball" src="assets/basketball.svg">
+                        <span class="sportIcon-text">Basketball</span>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="sportIcon">
+                        <img id="sportIcon-volleyball" src="assets/volleyball.svg">
+                        <span class="sportIcon-text">Volleyball</span>
+                    </div>
+                </a>
+                <a href="#">
+                    <div id="sportIcon-tennis" class="sportIcon">
+                        <img id="sportIcon-tennis" src="assets/tennis.svg">
+                        <span class="sportIcon-text">Tennis</span>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="sportIcon">
+                        <img id="sportIcon-soccer" src="assets/soccer.svg">
+                        <span class="sportIcon-text">Soccer</span>
+                    </div>
+                </a>
             </div>
-            <div id="slider" class="d-flex justify-content-center flex-column">
-                <div class="yearList d-flex justify-content-between pb-4">
-                    <span>2007</span>
-                    <span>2008</span>
-                    <span>2009</span>
-                    <span>2010</span>
-                    <span>2011</span>
-                    <span>2012</span>
-                    <span>2013</span>
-                </div>
-                <input id="Year" type="range" name="Year" step="1" min="2007" max="2013" style="display: block; margin: 0 auto;">
-            </div>
-        </div>
-        <div class="mapSection">
-            <div id="map" class="map"></div>
         </div>
     </div>
 
@@ -318,7 +98,5 @@
 -->
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet.markercluster@1.1.0/dist/leaflet.markercluster.js"></script>
-    <!--    <script src="mapdata.js"></script>-->
-    <script src="sec_map.js"></script>
     <script src="app.js"></script>
 </body></html>
