Updated Checkbox to Load Style on Window.load

--- a/index.html
+++ b/index.html
@@ -73,20 +73,23 @@
             <div class="sportIcon-section">
                 <div class="sportIcon-coming">
                     <img id="sportIcon-baskbetball" src="assets/basketball.svg">
-                    <span class="sportIcon-text">Basketball</span>
+                    <span class="sportIcon-text iconSoon">Basketball</span>
                 </div>
                 <div class="sportIcon-coming">
                     <img id="sportIcon-volleyball" src="assets/volleyball.svg">
-                    <span class="sportIcon-text">Volleyball</span>
+                    <span class="sportIcon-text iconSoon">Volleyball</span>
                 </div>
                 <div class="sportIcon-coming">
                     <img id="sportIcon-tennis" src="assets/tennis.svg">
-                    <span class="sportIcon-text">Tennis</span>
+                    <span class="sportIcon-text iconSoon">Tennis</span>
                 </div>
-
                 <div class="sportIcon-coming">
                     <img id="sportIcon-soccer" src="assets/soccer.svg">
-                    <span class="sportIcon-text">Soccer</span>
+                    <span class="sportIcon-text iconSoon">Soccer</span>
+                </div>
+                <div class="sportIcon-coming">
+                    <img id="sportIcon-baseball" src="assets/baseball.svg">
+                    <span class="sportIcon-text iconSoon">Baseball</span>
                 </div>
             </div>
         </div>
