--- a/ncaaFootball.html
+++ b/ncaaFootball.html
@@ -59,7 +59,7 @@
                         <div class="checkBtn">
                             <label>
                                 <span>SEC</span>
-                                <input type="checkbox" class="Conference" name="SEC" value="SEC" checked>
+                                <input type="checkbox" class="Conference" name="SEC" value="SEC" disabled>
                             </label>
                         </div>
                     </div>
